k8s/base/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-laravel-k8s-ingress
  namespace: vue-laravel-k8s
spec:
  rules:
  - host: vue-laravel.alfabeta.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vue-k8s-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: laravel-k8s-service
            port:
              number: 80
